--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- NavBar Section -->
     <nav class="navbar navbar-expand-lg bg-primary text-light py-4 flex-column">
         <div class="container-lg text-light">
-            <div class="navbar-brand" ><img class="w-auto" src="assets/images/odoo-white.svg"></div>
+            <div class="navbar-brand" ><img class="w-auto" src="./assets/images/google-white.svg"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
