--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,17 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body> 
     <!-- NavBar Section -->
     <nav class="navbar navbar-expand-lg bg-primary text-light py-4 flex-column">
         <div class="container-lg text-light">
-            <div class="navbar-brand" ><img class="w-auto" src="./assets/images/google-white.svg"></div>
+            <div class="navbar-brand" ><img class="w-auto" src="assets/images/google-white.svg"></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -42,7 +44,10 @@
                     </li>
                 </ul>
                 <a class="nav-link me-4">Sign In</a>
-                <button class="btn btn-light px-4">Buy Now</button>
+                <button class="btn btn-light px-4 d-flex align-items-center gap-2">
+                    <span class="material-icons-outlined small-icon">shopping_bag</span>
+                    Buy Now
+                </button>
             </div>
         </div>
         <hr class="container-lg text-light">
@@ -82,17 +87,17 @@
                                         <span class="badge bg-success align-self-start mt-1 p-2">Active</span>
                                     </div>
                                     <div class="col justify-content-between">
-                                        <div class="fs-6">CARD NUMBER</div>
-                                        <div class="fs-3">4358 - 7421 - 9256 - 6682</div>
+                                        <div class="fs-6 text-light">CARD NUMBER</div>
+                                        <div class="fs-3 text-light">4358 - 7421 - 9256 - 6682</div>
                                     </div>
                                     <div class="row justify-content-between">
                                         <div class="mt-3 col">
-                                            <div class="fs-6">NAME</div>
-                                            <div class="h4">John Snow</div>
+                                            <div class="fs-6 text-light">NAME</div>
+                                            <div class="h4 text-light">John Snow</div>
                                         </div>
                                         <div class="mt-3 col">
-                                            <div class="fs-6">EXPIRY DATE</div>
-                                            <div class="h4">11/23</div>
+                                            <div class="fs-6 text-light">EXPIRY DATE</div>
+                                            <div class="h4 text-light">11/23</div>
                                         </div>
                                     </div>
                                 </div>
