--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
                     </li>
                 </ul>
                 <a class="nav-link me-4">Sign In</a>
-                <button class="btn btn-light px-4 d-flex align-items-center gap-2">
-                    <span class="material-icons-outlined small-icon">shopping_bag</span>
+                <button class="btn btn-light px-4 d-flex align-items-center gap-2 fw-medium">
+                    <span class="material-icons-outlined small-icon fw-medium">shopping_bag</span>
                     Buy Now
                 </button>
             </div>
@@ -61,7 +61,7 @@
                     <p class="card-text text-light mb-5 w-50">Build a beautiful, modern website with flexible components built
                         from scratch.</p>
                     <div class="mb-5">
-                        <button class="btn btn-light d-inline flex px-4 py-3">Get started +</button>
+                        <button class="btn btn-light d-inline flex px-4 py-3 d-flex align-items-center gap-2 fw-medium">Get started <span class="material-icons-outlined small-icon">add</span></button>
                     </div>
                     <div class="d-flex flex-row justify-content-start gap-4 mb-5">
                         <span>Trusted By:</span>
@@ -270,7 +270,10 @@
                     </p>
             </div>
             <div class="justify-content-end align-self-end pb-4">
-                <button class="btn btn-light px-4 py-3">Learn more</button>
+                <button class="btn btn-light px-4 py-3 d-flex align-items-center gap-2 fw-medium">
+                    Learn more
+                    <span class="material-icons-outlined">arrow_right_alt</span>
+                </button>
             </div>
         </div>
     </section>
@@ -424,8 +427,8 @@
                 <p class="text-white">Modern-looking websites.</p>
             </div>
             <div>
-                <button type="button" class="btn btn-light px-4 py-3 h5 me-2">Documentation</button>
-                <button type="button" class="btn btn-primary px-4 py-3 h5">Purchase now</button>
+                <button type="button" class="btn btn-light px-4 py-3 h5 me-2 fw-medium">Documentation</button>
+                <button type="button" class="btn btn-primary px-4 py-3 h5 text-light fw-medium">Purchase now</button>
             </div>
         </div>
         <hr class="container-lg text-light mb-5 faded-hr">
