--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
                     </li>
                 </ul>
                 <a class="nav-link me-4">Sign In</a>
-                <button class="btn btn-light px-4 d-flex align-items-center gap-2 fw-medium">
-                    <span class="material-icons-outlined small-icon fw-medium">shopping_bag</span>
-                    Buy Now
+                <button class="btn btn-light px-4 d-flex align-items-center gap-2">
+                    <span class="material-icons-outlined small-icon">shopping_bag</span>
+                    <span class="fw-medium">Buy Now</span>
                 </button>
             </div>
         </div>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="bg-white rounded-2 d-flex flex-column shadow-lg p-3">
                             <div class="d-flex flex-row gx-2 align-items-center">
-                                <span class="bg-success rounded-circle text-white avatar-check d-inline">/</span>
+                                <span class="bg-success rounded-circle text-white avatar-check d-flex align-items-center justify-content-center"><span class="material-icons-outlined small-icon">done</span></span>
                                 <span class="justify-content-center d-flex flex-fill ps-3 flex-column align-items-start">
                                     <span class="h6 mb-0">Jimmy Hendrix</span>
                                     <span class="fs-12">Built to be customized.</span>
@@ -426,8 +426,8 @@
                 <h1 class="text-light">Brilliant solutions for your ideas</h1>
                 <p class="text-white">Modern-looking websites.</p>
             </div>
-            <div>
-                <button type="button" class="btn btn-light px-4 py-3 h5 me-2 fw-medium">Documentation</button>
+            <div class="d-flex flex-row">
+                <button type="button" class="btn btn-light px-4 py-3 h5 me-2 fw-medium d-flex align-items-center"><span class="material-icons-outlined small-icon text-primary me-2">description</span>Documentation</button>
                 <button type="button" class="btn btn-primary px-4 py-3 h5 text-light fw-medium">Purchase now</button>
             </div>
         </div>
@@ -470,8 +470,8 @@
         <hr class="container-lg text-light mb-3 faded-hr">
         <div class="container-lg">
             <div class="d-flex flex-row justify-content-between">
-                <div class="d-flex flex-row text-light gap-3">
-                    <div>C</div>
+                <div class="d-flex flex-row text-light gap-2">
+                    <div><span class="material-icons-outlined small-icon">copyright</span></div>
                     <div class="logo-footer d-flex align-items-center"><img class="w-100" src="assets/images/odoo-white.svg"></div>
                     <div class="d-flex fs-12 align-items-end">All Rights Reserved</div>
                 </div>
