--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 
@@ -346,11 +345,11 @@
                         </div>
                         <div class="accordion-item mb-4 shadow-lg border border-secondary-subtle rounded-4 overflow-hidden">
                             <h2 class="accordion-header h2 rounded-4">
-                              <button class="accordion-button bg-white rounded-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              <button class="accordion-button bg-white rounded-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                                   <span class="h5">Which license do I need?</span>
                               </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
+                            <div id="collapseTwo" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
                               <div class="accordion-body">
                                 <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                               </div>
@@ -358,11 +357,11 @@
                           </div>
                           <div class="accordion-item mb-4 shadow-lg border border-secondary-subtle rounded-4 overflow-hidden">
                             <h2 class="accordion-header h2 rounded-4">
-                              <button class="accordion-button bg-white rounded-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              <button class="accordion-button bg-white rounded-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                                   <span class="h5">Which license do I need?</span>
                               </button>
                             </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
+                            <div id="collapseThree" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
                               <div class="accordion-body">
                                 <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                               </div>
@@ -372,14 +371,14 @@
                     </div>    
                 </div>
                 <div class="col">
-                    <div class="accordion" id="accordionExample">
+                    <div class="accordion" id="accordionExample2">
                         <div class="accordion-item mb-4 shadow-lg border border-secondary-subtle rounded-4 overflow-hidden">
                             <h2 class="accordion-header h2 rounded-4">
                               <button class="accordion-button bg-white rounded-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                                   <span class="h5">Which license do I need?</span>
                               </button>
                             </h2>
-                            <div id="collapseFour" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
+                            <div id="collapseFour" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample2">
                               <div class="accordion-body">
                                 <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                               </div>
@@ -391,7 +390,7 @@
                                     <span class="h5">Which license do I need?</span>
                                 </button>
                               </h2>
-                              <div id="collapseFive" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
+                              <div id="collapseFive" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample2">
                                 <div class="accordion-body">
                                   <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                                 </div>
@@ -403,7 +402,7 @@
                                     <span class="h5">Which license do I need?</span>
                                 </button>
                               </h2>
-                              <div id="collapseSix" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample">
+                              <div id="collapseSix" class="accordion-collapse collapse hide" data-bs-parent="#accordionExample2">
                                 <div class="accordion-body">
                                   <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                                 </div>
