--- a/src/index.html
+++ b/src/index.html
@@ -170,7 +170,7 @@
                     <span class="badge rounded-pill text-bg-success text-white py-2 px-3">Features</span>
                 </div>
                 <h5 class="mb-5">Get components and examples, including tons of variables that will help you grow your business.</h5>
-                <p class="text-success">Perfect for modern startups</p> 
+                <p class="text-success"><span class="checkbox-container bg-success"><span class="material-icons-outlined "></span>Perfect for modern startups</p> 
                 <p class="text-success">Fully customizable and scalable</p> 
             </div>
             <div class="col-lg-6 justify-content-center">
@@ -284,7 +284,7 @@
             <h5 class="mt-4 mb-5 pb-5">Awards for design, creativity, and innovation on the Internet</h5>
             <div class="d-flex flex-row gap-4 pt-4 pb-5 ">
                 <div class="width-250">
-                    <div class="card rounded-2 d-flex flex-column shadow-lg align-items-center px-4">
+                    <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/airbnb.svg"></div>
                         <div class="mb-3">stars</div>
                         <div class="h5">4.95 out of 5 stars</div>
@@ -292,21 +292,21 @@
                     </div>
                 </div>
                 <div class="width-250">
-                    <div class="card rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative bottom-25">
+                    <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/amazon.svg"></div>
                         <div class="mb-3 text-center">They build modern-looking websites easily using Tabs.</div>
                         <a class="h6">Learn More</a>
                     </div>
                 </div>
                 <div class="width-250">
-                    <div class="card rounded-2 d-flex flex-column shadow-lg align-items-center px-4">
+                    <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/slack.svg"></div>
                         <div class="mb-3 text-center">They build modern-looking websites easily using Trello.</div>
                         <a class="h6">Learn More</a>
                     </div>
                 </div>
                 <div class="width-250">
-                    <div class="card rounded-2 d-flex flex-column shadow-lg align-items-center px-4">
+                    <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/spotify.svg"></div>
                         <div class="mb-3">stars</div>
                         <div class="h6">4.95 out of 5 stars</div>
@@ -314,7 +314,7 @@
                     </div>
                 </div>
                 <div class="width-250">
-                    <div class="card rounded-2 d-flex flex-column shadow-lg align-items-center px-4">
+                    <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/paypal.svg"></div>
                         <div class="mb-3 text-center">They build modern-looking websites easily using Docker.</div>
                         <a class="h6">Learn More</a>
