--- a/src/index.html
+++ b/src/index.html
@@ -170,8 +170,14 @@
                     <span class="badge rounded-pill text-bg-success text-white py-2 px-3">Features</span>
                 </div>
                 <h5 class="mb-5">Get components and examples, including tons of variables that will help you grow your business.</h5>
-                <p class="text-success"><span class="checkbox-container bg-success"><span class="material-icons-outlined "></span>Perfect for modern startups</p> 
-                <p class="text-success">Fully customizable and scalable</p> 
+                <span class="text-success d-flex flex-row gap-2 align-items-center">
+                    <span class="material-icons-outlined text-white bg-success rounded-1 small-icon">done</span>
+                    Perfect for modern startups
+                </span> 
+                <span class="text-success d-flex flex-row gap-2 align-items-center">
+                    <span class="material-icons-outlined text-white bg-success rounded-1 small-icon">done</span>
+                    Fully customizable and scalable
+                </span> 
             </div>
             <div class="col-lg-6 justify-content-center">
                 <div class="features-img rounded-4 bg-primary shadow-lg overflow-hidden">
