--- a/src/index.html
+++ b/src/index.html
@@ -437,38 +437,40 @@
             </div>
         </div>
         <hr class="container-lg text-light mb-5 faded-hr">
-        <div class="container-lg d-flex flex-row justify-content-between align-items-start">
-            <div class="col-lg-4 d-flex flex-column">
-                <span class="w-25 mb-4"><img class="w-100" src="assets/images/odoo-white.svg"></span>
-                <p class="text-light fs-12 pe-5">Odoo attempts to bring the best development experience to designers and developers by offering the tools needed for having a quick and solid start in most web projects.
-                </p>
-            </div>
-            <div class="col-lg-6 d-flex row gap-2 text-light align-items-start">
-                <div class="col d-flex flex-column">
-                    <b class="mb-3">Account</b>
-                    <ul class="list-unstyled">
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Profile</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Settings</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Billings</a></li>
-                        <li><a class="text-light fs-12" href="#">Notifications</a></li>
-                    </ul>
+        <div class="container-lg">
+            <div class="row d-flex justify-content-between align-items-start">
+                <div class="col-lg-4 col-md-12 d-flex flex-column">
+                    <span class="w-25 mb-4"><img class="w-100" src="assets/images/odoo-white.svg"></span>
+                    <p class="text-light fs-12 pe-5">Odoo attempts to bring the best development experience to designers and developers by offering the tools needed for having a quick and solid start in most web projects.
+                    </p>
                 </div>
-                <div class="col d-flex flex-column">
-                    <b class="mb-3">About</b>
-                    <ul class="list-unstyled">
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Services</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Pricing</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Contact</a></li>
-                        <li><a class="text-light fs-12" href="#">Careers</a></li>
-                    </ul>
-                </div>
-                <div class="col d-flex flex-column">
-                    <b class="mb-3">Company</b>
-                    <ul class="list-unstyled">
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Community</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Help center</a></li>
-                        <li class="mb-1"><a class="text-light fs-12" href="#">Support</a></li>
-                    </ul>
+                <div class="col-lg-6 col-md-12 d-flex row gap-2 text-light align-items-start">
+                    <div class="col d-flex flex-column">
+                        <b class="mb-3">Account</b>
+                        <ul class="list-unstyled">
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Profile</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Settings</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Billings</a></li>
+                            <li><a class="text-light fs-12" href="#">Notifications</a></li>
+                        </ul>
+                    </div>
+                    <div class="col d-flex flex-column">
+                        <b class="mb-3">About</b>
+                        <ul class="list-unstyled">
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Services</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Pricing</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Contact</a></li>
+                            <li><a class="text-light fs-12" href="#">Careers</a></li>
+                        </ul>
+                    </div>
+                    <div class="col d-flex flex-column">
+                        <b class="mb-3">Company</b>
+                        <ul class="list-unstyled">
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Community</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Help center</a></li>
+                            <li class="mb-1"><a class="text-light fs-12" href="#">Support</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
