--- a/src/index.html
+++ b/src/index.html
@@ -426,7 +426,7 @@
     </section>
 
     <div class="footer bg-dark-blue pt-5 pb-2 d-flex flex-column justify-content-end">
-        <div class="container-lg d-flex flex-row justify-content-between align-items-center">
+        <div class="container-lg d-flex flex-row justify-content-between align-items-center sm:flex-column">
             <div>
                 <h1 class="text-light">Brilliant solutions for your ideas</h1>
                 <p class="text-white">Modern-looking websites.</p>
