--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
     <nav class="navbar navbar-expand-lg bg-primary text-light py-4 flex-column">
         <div class="container-lg text-light">
             <div class="navbar-brand" ><img class="w-auto" src="assets/images/google-white.svg"></div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon text-white"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav m-auto mb-2 mb-lg-0 row gx-4">
@@ -426,7 +426,7 @@
     </section>
 
     <div class="footer bg-dark-blue pt-5 pb-2 d-flex flex-column justify-content-end">
-        <div class="container-lg d-flex flex-row justify-content-between align-items-center sm:flex-column">
+        <div class="container-lg d-flex flex-row justify-content-between align-items-center">
             <div>
                 <h1 class="text-light">Brilliant solutions for your ideas</h1>
                 <p class="text-white">Modern-looking websites.</p>
