--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
             <div class="col-lg-6 justify-content-center">
                 <div class="features-img rounded-4 bg-primary shadow-lg overflow-hidden">
                     <div class="w-100 h-100 position-relative">
-                        <button class="btn btn-light position-absolute top-10 start-10">Play Video</button>
+                        <button class="btn btn-light position-absolute top-10 end-10">Play Video</button>
                         <img class="w-100" src="assets/images/img_02.jpg"> 
                     </div>
                 </div>
@@ -258,7 +258,8 @@
                 <p>Get components and examples, including tons of variables that will help you grow your business.</p>
             </div>
             <div class="col-lg-6 justify-content-center">
-                <div class="features-img rounded-4 bg-primary shadow-lg overflow-hidden">
+                <div class="features-img rounded-4 bg-primary shadow-lg overflow-hidden position-relative">
+                    <button class="btn btn-light position-absolute top-10 start-10">Play Video</button>
                     <img class="w-100" src="assets/images/img_03.jpg">
                 </div>
             </div>
