--- a/src/index.html
+++ b/src/index.html
@@ -478,8 +478,8 @@
         <hr class="container-lg text-light mb-3 faded-hr">
         <div class="container-lg">
             <div class="d-flex flex-row justify-content-between">
-                <div class="d-flex flex-row text-light gap-2">
-                    <div><span class="material-icons-outlined small-icon">copyright</span></div>
+                <div class="d-flex flex-row text-light gap-2 align-items-center justify-content-center">
+                    <div class="d-flex align-items-center justify-content-center"><span class="material-icons-outlined small-icon">copyright</span></div>
                     <div class="logo-footer d-flex align-items-center"><img class="w-100" src="assets/images/odoo-white.svg"></div>
                     <div class="d-flex fs-12 align-items-end">All Rights Reserved</div>
                 </div>
