--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,13 @@
                     <div class="col">
                         <div class="bg-white rounded-2 d-flex flex-column shadow-lg mb-3 align-items-center p-5">
                             <div class="w-75 mb-2"><img class="w-100" src="assets/images/airbnb.svg"></div>
-                            <div class="mb-3">stars</div>
+                            <div class="mb-3">
+                                <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                                <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                                <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                                <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                                <span class="material-icons-outlined small-icon text-secondary">star_rate</span>
+                            </div>
                             <div class="h6">4.95 out of 5 stars</div>
                             <div class="fs-12">From 23 reviews</div>
                         </div>
@@ -240,7 +246,7 @@
                 <span class="mb-4">
                     <span class="badge rounded-pill text-bg-primary text-white d-inline py-2 px-3 ">Tecnology</span>
                 </span>
-                <h2 class="mb-4">We build for designers and developers</h2>
+                <h2 class="mb-4">We use the latest technologies on the market</h2>
                 <p>Get components and examples, including tons of variables that will help you grow your business.</p>
                 <p class="text-primary">See case studies</p>
             </div>
@@ -293,7 +299,13 @@
                 <div class="width-250">
                     <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/airbnb.svg"></div>
-                        <div class="mb-3">stars</div>
+                        <div class="mb-3">
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-secondary">star_rate</span>
+                        </div>
                         <div class="h5">4.95 out of 5 stars</div>
                         <div class="p">From 23 reviews</div>
                     </div>
@@ -315,7 +327,13 @@
                 <div class="width-250">
                     <div class="card clickable rounded-2 d-flex flex-column shadow-lg align-items-center px-4 position-relative">
                         <div class="w-75 mb-4"><img class="w-100" src="assets/images/spotify.svg"></div>
-                        <div class="mb-3">stars</div>
+                        <div class="mb-3">
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-warning">star_rate</span>
+                            <span class="material-icons-outlined small-icon text-secondary">star_rate</span>
+                        </div>
                         <div class="h6">4.95 out of 5 stars</div>
                         <div class="fs-12">From 23 reviews</div>
                     </div>
