--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
                             <div class="d-flex flex-row gx-2 p-3">
                                 <span class="bg-warning rounded-circle text-white avatar-container">JH</span>
                                 <span class="justify-content-start align-items-center d-flex flex-fill ps-3 h6 mb-0">Jimmy Hendrix</span>
-                                <span class="justify-content-start align-items-center d-flex">heart</span>
+                                <span class="justify-content-start align-items-center d-flex"><span class="material-icons-outlined small-icon text-secondary">favorite</span>
                             </div>
                         </div>
                         <div class="bg-white rounded-2 d-flex flex-column shadow-lg p-3">
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col">
                         <div class="bg-white rounded-2 d-flex flex-column shadow-lg mb-3 align-items-center p-5">
-                            <div class="w-75 mb-2"><img class="w-100" src="assets/images/airbnb.svg"></div>
+                            <div class="w-75 mb-4"><img class="w-100" src="assets/images/airbnb.svg"></div>
                             <div class="mb-3">
                                 <span class="material-icons-outlined small-icon text-warning">star_rate</span>
                                 <span class="material-icons-outlined small-icon text-warning">star_rate</span>
